2012-02-15  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-encoding-command-interactive)
	(tramp-local-end-of-line): Add missing :version tags to new
	defcustoms and defgroups.

2012-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error-with-buffer): Use `tramp-get-connection-buffer'.

	* tramp-compat.el (tramp-compat-copy-directory): Add optional
	argument COPY-CONTENTS.  It is not handled yet.

	* tramp-smb.el (tramp-smb-server-version)
	(tramp-smb-actions-with-tar): New defconst.
	(tramp-smb-action-with-tar): New defun.
	(tramp-smb-handle-copy-directory): Implement using "tar".  By
	this, time-stamps are preserved.
	(tramp-smb-handle-copy-file): Handle also the case of directories.
	(tramp-smb-handle-rename-file): Use "rename", when source and
	target are on the same share.
	(tramp-smb-maybe-open-connection): Use `tramp-smb-server-version'.

2012-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-path): Add "/opt/local/bin".

2012-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (EMACS_INFO): Add variable.

	* tramp.el (tramp-get-method-parameter): Move up.
	(tramp-mode-string-to-int, tramp-local-host-p): Set tramp-autoload
	cookie.

2012-01-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-function-alist): Adapt docstring.
	(tramp-parse-shostkeys-sknownhosts): Do not return "." or "..".
	(tramp-parse-putty): Handle UNIX case.

	* tramp-sh.el (tramp-completion-function-alist-putty): Handle UNIX case.

2012-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-login): Set connection property "login-as".

	* tramp-cache.el (tramp-dump-connection-properties): Do not dump
	properties, when "login-as" is set.

	* tramp-sh.el (tramp-methods): Add user spec to "pscp" and "psftp".
	(tramp-default-user-alist): Don't add "pscp".
	(tramp-do-copy-or-rename-file-out-of-band): Use connection
	property "login-as", if set.  (Bug#10530)
